# tinycolorio

./: Makefile  README.md  test_ocio_config.cc  test_spi3dlut.cc  tiny-color-io.h  tiny-ctl.h
examples/3dlut/: Makefile  filter.cc  filter.h  main.cc
experiment/yaml/: Makefile  nano_yaml.cc
fitting_experiment/: fitting.ipynb  fitting.py  requirements.txt
fuzzer/: meson.build
yaml/: Yaml.cpp  Yaml.hpp
